--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+      <!-- google fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet">
+
+      <!-- font awesome -->
+      <script src="https://kit.fontawesome.com/f5f2698f05.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
